--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
   "name": "react-block-template",
+  "homepage":"https://sijleljodal.github.io/react-block-template/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.6.2",
+    "gh-pages": "^2.2.0",
+    "html-react-parser": "^0.10.0",
+    "lodash-es": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-firebase-file-uploader": "^2.4.3",
+    "react-icons": "^3.8.0",
+    "react-masonry-css": "^1.0.14",
+    "react-scripts": "3.3.0",
+    "react-spinners": "^0.8.0",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
